--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <option value="THB">THB</option>
                     </select>
                     <br>
-                    <input type="number" placeholder="Output balance" rea>
+                    <input type="number" placeholder="Output balance" readonly>
                     <br>
                     <button onclick="convertCurrency()">Convert</button>
                 </div>
@@ -100,3 +100,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
